--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - uses: actions/setup-go@v3
+        with:
+            go-version: '1.16.1' # The Go version to download (if necessary) and use.
+      - run: go build -a -o release/demo-k8s
+      
       - name: Docker meta
         id: docker_meta
         uses: docker/metadata-action@v4
