--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,14 @@ jobs:
         with:
             go-version: '1.16.1' # The Go version to download (if necessary) and use.
       - run: go build -a -o release/demo-k8s
-      
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          
       - name: Docker meta
         id: docker_meta
         uses: docker/metadata-action@v4
