--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/setup-go@v3
         with:
             go-version: '1.16.1' # The Go version to download (if necessary) and use.
-      - run: go build -a -o release/demo-k8s
+      - run: GOOS=linux GOARCH=amd64 go build -a -o release/demo-k8s
 
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
