--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ env:
 jobs:
   docker:
     name: Docker build & push
-    runs-on: ubuntu-latest
+    runs-on: alpine-latest
     permissions:
       contents: read
       packages: write
