tag set to main

--- a/charts/demo-k8s/values.yaml
+++ b/charts/demo-k8s/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: 502474778139.dkr.ecr.us-east-1.amazonaws.com/codefresh-demo/as-polyakov/demo-k8s
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "main"
 
 imagePullSecrets: [{ name: regcred }]
 nameOverride: ""
