--- a/charts/demo-k8s/values-harness.yaml
+++ b/charts/demo-k8s/values-harness.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
-image: <+main_artifact.image>
+image: <+artifact.image>
 imagePullSecrets: [{name: regcred}]
 nameOverride: ""
 fullnameOverride: ""
