--- a/charts/demo-k8s/values-harness.yaml
+++ b/charts/demo-k8s/values-harness.yaml
@@ -4,7 +4,7 @@
 
 replicaCount: 1
 image: <+artifact.image>
-  repositoryy: <+artifact.metadata.url>
+  repositoryy: <+.metadata.url>
   tag: <+artifact.tag>
   pullPolicy: Always
 imagePullSecrets: [{name: regcred}]
