--- a/charts/demo-k8s/values.yaml
+++ b/charts/demo-k8s/values.yaml
@@ -4,6 +4,7 @@
 
 replicaCount: 1
 image:
+  repository: datacyborg.jfrog.io/antonpolyakov-docker/demo-k8s
   pullPolicy: Always
 imagePullSecrets: [{name: regcred}]
 nameOverride: ""
